[package]
name = "pm"
version = "0.1.0"
authors = ["yuyongpeng <yuyongpeng@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.18", feature="full" }
quote = "1.0.4"
proc-macro2 = "1.0.12"